--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -50,12 +50,12 @@
     justify-content: center;
     border: 1px solid black;
     background-color: white;
-    opacity: 0.75;
+    opacity: 0.7;
     position: absolute;
 
     .title {
       font-weight: bold;
-      margin-bottom: 6px;
+      margin: 0 6px 0;
       font-size: 22px;
       color: #4a4a4a;
     }
